# core-spec-pyscf

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
examples/qr/: LiH-all_approx.py  LiH-all_approx_plot.py
pyscf/cvs/: __init__.py  ghf.py  no_fxc.py  rhf.py  uhf.py
pyscf/cvs/test/: test_core.py  test_direct_diag.py  test_no_fxc.py  test_rhf.py  test_trans_dip.py
pyscf/qr/: __init__.py  chkfile.py  ghf.py  hf.py  intermediates.py  manifold.py  rhf.py  uhf.py
pyscf/qr/test/: _gen_lih_data.py  lih_ref_intermediates.npz  test_LiH.py  test_options.py  test_smoke.py
pyscf/zora/: ZORA.py
pyscf/zora/test/: test_rhf.py
